/**
 * This is a PHP Plurk API.
 * @package php-plurk-api
 *
 */ 

2010-03-19 17:24:57 CST  roga.lin@gmail.com

	move RLPlurkAPI compatible functions
	rename CONSTANT files
	remove unnecessary protected variables
	add support Plurk RealTime API
	remove unnecessary common class

2010-03-11 11:43:57 CST  roga.lin@gmail.com

	modify constants for the latest API spec.
	
2010-02-26 11:49:46 CST  appleboy.tw@gmail.com

	fixed syntax error on 213 line in plurk_api.php file

2010-02-24 16:15:46 CST  roga.lin@gmail.com

	move two methods from class "common" to "plurk_api", re-define the config file, and error handling.

2010-02-19 21:36:04 CST  appleboy.tw

	fixed word count error, add second parameter of mb_strlen function.
	
2010-02-04 17:31:29 CST  roga.lin@gmail.com

	re-pack, and fix update_image() variable problem.
	
2010-01-29 16:12:55 CST  appleboy.tw

	edit return type of update_picture function, and remove "exit();" from  function login().
	
2010-01-27 12:04:35 CST  appleboy.tw

	add proxy setting for php-plurk-api by Issue 10
	http://code.google.com/p/php-plurk-api/issues/detail?id=10	
	
2010-01-26 23:14:51 CST  appleboy.tw

	fixed error /API/Profile/getOwnProfile

2010-01-26 23:11:28 CST  appleboy.tw

	edit /API/Profile/getOwnProfile, set user_info with return object

2010-01-26 22:41:02 CST  appleboy.tw

	fixed /API/Users/update Privacy
		
2010-01-26 22:38:10 CST  appleboy.tw

	change empty space to tab

2010-01-26 22:33:52 CST  appleboy.tw

	add some error message form plurk web.
	
2010-01-26 22:22:17 CST  appleboy.tw

	remove some error message form plurk_api.php, and write plurk error message to file.
	
2010-01-24 13:41:58 CST  appleboy.tw

	fix improve add_plurk() , edit_plurk() , and add_response() function by issue 9
	http://code.google.com/p/php-plurk-api/issues/detail?id=9&can=1

2010-01-20 13:52:58 CST  roga.lin@gmail.com

	fix for issue 8

2010-01-14 13:17:02 CST  roga.lin@gmail.com

	php-plurk-api 1.4 release

2010-01-12 23:25:49 CST  chrisliuqq
